Move files to root directory

--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,8 @@ footer_show_references: true
 # references_title: References on request (Override references text)
 
 # Build settings
-remote_theme: sproogen/resume-theme
+# remote_theme: sproogen/resume-theme
+remote_theme: sproogen/modern-resume-theme
 
 sass:
   sass_dir: _sass
@@ -125,3 +126,4 @@ sass:
 
 plugins:
  - jekyll-seo-tag
+ - jekyll-remote-theme
