--- a/_config.yml
+++ b/_config.yml
@@ -15,17 +15,17 @@ email: ivneld@naver.com
 darkmode: never
 
 # Social links
-twitter_username: facespics
+# twitter_username: facespics
 github_username:  ivneld
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: jameswgrant
-linkedin_username: jameswgrant
+# instagram_username: jameswgrant
+linkedin_username: Yuseong Kim
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: globalmtb
+# youtube_username: globalmtb
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
