--- a/_config.yml
+++ b/_config.yml
@@ -47,11 +47,13 @@ additional_links:
 # About Section
 # about_title: About Me
 about_profile_image: images/profile-image.jpeg
-about_content: 상위 레벨의 설계를 견고한 서비스로 구체화하며, 지속 가능하게 성장하는 아키텍처를 고민하는 3년차 Java & Spring 기반의 백엔드 개발자입니다. |
-지난 3년간 보안 통신 인프라의 핵심인 PKI 시스템의 개발 및 배포, 운영 전 과정에 주도적으로 참여하며 실무 역량을 쌓아왔습니다. 북미/유럽 차량용 표준(IEEE1609.2.1, ETSI) 및 범용 표준(X.509)을 준수하는 B2B 서버 애플리케이션을 개발하며 글로벌 보안 규격에 대한 깊은 이해도를 갖추었습니다. |
-특히 X.509 PKI 프로젝트에서는 5인 규모의 팀의 팀장으로서, 상위 설계를 바탕으로 세부 설계부터 구현, 인프라 구축 및 배포까지 전 과정을 리딩했습니다. 구현 자유도가 높은 X.509의 특성상 끊임없이 유입되는 요구사항들의 기술적 필요성을 면밀히 검토하고, 이를 시스템에 유연하게 녹여낼 수 있는 성장하는 아키텍처를 구축하는 데 집중했습니다. |
-이 과정에서 복잡한 의사결정을 체계화하기 위해 사내 ADR 템플릿 고도화를 주도하였고, 팀 내에 기록 중심의 공유 문화를 정착시켜 프로젝트의 안정성을 확보했습니다. 단순히 기능을 완성하는 것을 넘어, 비즈니스 요구사항과 시스템의 확장성 사이에서 최적의 균형점을 찾기 위해 팀장으로서 끊임없이 노력하고 있습니다. |
-현재는 PKI 팀장으로서 X.509 및 IEEE1609.2.1 프로젝트의 개발과 운영을 총괄하고 있으며, 안정적인 시스템 설계와 효율적인 팀 매니징을 통해 팀과 회사의 성장에 기여하고 있습니다.
+about_content: |
+	상위 레벨의 설계를 견고한 서비스로 구체화하며, 지속 가능하게 성장하는 아키텍처를 고민하는 3년차 Java & Spring 기반의 백엔드 개발자입니다.
+       	지난 3년간 보안 통신 인프라의 핵심인 PKI 시스템의 개발 및 배포, 운영 전 과정에 주도적으로 참여하며 실무 역량을 쌓아왔습니다. 북미/유럽 차량용 표준(IEEE1609.2.1, ETSI) 및 범용 표준(X.509)을 준수하는 B2B 서버 애플리케이션을 개발하며 글로벌 보안 규격에 대한 깊은 이해도를 갖추었습니다.
+	특히 X.509 PKI 프로젝트에서는 5인 규모의 팀의 팀장으로서, 상위 설계를 바탕으로 세부 설계부터 구현, 인프라 구축 및 배포까지 전 과정을 리딩했습니다. 구현 자유도가 높은 X.509의 특성상 끊임없이 유입되는 요구사항들의 기술적 필요성을 면밀히 검토하고, 이를 시스템에 유연하게 녹여낼 수 있는 성장하는 아키텍처를 구축하는 데 집중했습니다.
+	이 과정에서 복잡한 의사결정을 체계화하기 위해 사내 ADR 템플릿 고도화를 주도하였고, 팀 내에 기록 중심의 공유 문화를 정착시켜 프로젝트의 안정성을 확보했습니다. 단순히 기능을 완성하는 것을 넘어, 비즈니스 요구사항과 시스템의 확장성 사이에서 최적의 균형점을 찾기 위해 팀장으로서 끊임없이 노력하고 있습니다.
+	현재는 PKI 팀장으로서 X.509 및 IEEE1609.2.1 프로젝트의 개발과 운영을 총괄하고 있으며, 안정적인 시스템 설계와 효율적인 팀 매니징을 통해 팀과 회사의 성장에 기여하고 있습니다.
+
 
   I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
 
