--- a/_config.yml
+++ b/_config.yml
@@ -54,42 +54,43 @@ about_content: |
   이 과정에서 복잡한 의사결정을 체계화하기 위해 사내 ADR 템플릿 고도화를 주도하였고, 팀 내에 기록 중심의 공유 문화를 정착시켜 프로젝트의 안정성을 확보했습니다. 단순히 기능을 완성하는 것을 넘어, 비즈니스 요구사항과 시스템의 확장성 사이에서 최적의 균형점을 찾기 위해 팀장으로서 끊임없이 노력하고 있습니다.
   현재는 PKI 팀장으로서 X.509 및 IEEE1609.2.1 프로젝트의 개발과 운영을 총괄하고 있으며, 안정적인 시스템 설계와 효율적인 팀 매니징을 통해 팀과 회사의 성장에 기여하고 있습니다.
 
-
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
-
 content:
-  - title: Projects # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: top-middle
-        title: Super awesome project
-        link: github.com/sproogen
-        # link_text: Project Website
-        additional_links:
-          - title:  sproogen/modern-resume-theme
-            icon: fab fa-github
-            url: github.com/sproogen/modern-resume-theme
-          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
-          #   icon: fab fa-github
-          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
-        quote: >
-          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
-        description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+# - title: Projects # Title for the section
+#   layout: list # Type of content section (list/text)
+#   content:
+#     - layout: top-middle
+#       title: Super awesome project
+#       link: github.com/sproogen
+#       # link_text: Project Website
+#       additional_links:
+#         - title:  sproogen/modern-resume-theme
+#           icon: fab fa-github
+#           url: github.com/sproogen/modern-resume-theme
+#         # - title:  Github page for project (eg. sproogen/modern-resume-theme)
+#         #   icon: fab fa-github
+#         #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
+#       quote: >
+#         This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
+#       description: | # this will include new lines to allow paragraphs
+#         I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
 
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
+        title: AutoCrypt
+        link: https://autocrypt.co.kr/
         # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
+        sub_title: PKI Team Lead / Backend Developer
+        caption: 2023-09-18 ~ Present
         quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
-        description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+          2노드 HA 앱 / 인프라 아키텍처 설계를 통한 무중단 PKI 시스템 구축
+        description: | 
+          - **2노드 고가용성(HA) 통합 아키텍처 설계**: 어플라이언스 환경의 서비스 무중단을 위한 애플리케이션 및 인프라 이중화 구조 설계
+          - **PCIe HSM 이중화 및 동기화**: 하드웨어 보안 모듈 간 키 복제 및 DB 동기화 프로세스 설계를 통한 물리적 장애 대응 체계 구축
+          - **국가 기간망 보안 인프라 운영**: 한국도로공사 폐쇄망 내 차량용 PKI 시스템 납품 및 안정적 운영 주도
+          - **기술 의사결정 체계(ADR) 고도화**: 팀 내 상세 설계 및 주요 기술 결정 사항을 문서화하여 아키텍처 투명성 확보
+          - **5인 규모 PKI 팀 매니징**: 요구사항 분석부터 배포까지 전 과정을 관리하며 팀의 기술적 성장을 견인
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
