--- a/_config.yml
+++ b/_config.yml
@@ -107,31 +107,63 @@ content:
           - **테스트 신뢰성 확보 및 아키텍처 표준화**: 테스트 목적에 최적화된 전용 어노테이션을 구축하여 트랜잭션 경계 불일치 문제를 근본적으로 해결하고, 개발 의도가 명확히 반영된 테스트 작성 가이드 정립
           - **정적 분석 도구 도입**: Java Error Prone과 Checkstyle을 직접 조사하고 도입하여, 코드 컨벤션의 자동화된 검증 체계를 구축하고 잠재적인 런타임 버그를 개발 단계에서 조기 차단
 
-  - title: Education # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title: Harvard University
-        caption: 2010 - 2013
-        sub_title: BSc Computer Science
-        quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-        description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+  - title: Open Source
+      layout: list
+      content:
+        - layout: left
+          title: MovieCommunity (영화 리뷰 커뮤니티)
+          link: https://github.com/ivneld/MovieCommunity
+          quote: >
+            Spring Boot와 JPA를 활용한 5인 다직군(BE, FE, DE) 협업 커뮤니티 프로젝트
+          description: |
+            - **도메인 설계 및 API 개발**: 영화 리뷰 및 커뮤니티 기능을 위한 도메인 모델을 설계하고, RESTful API를 통해 프론트엔드와의 원활한 데이터 통신 구현
+            - **JPA 기반 데이터 최적화**: 엔티티 연관관계 매핑 및 지연 로딩 설계를 통해 쿼리 성능을 고려한 데이터 접근 계층 구축
+            - **다직군 협업**: 디자이너 및 프론트엔드 개발자와의 협업을 통해 요구사항 분석부터 배포 준비까지의 전체 소프트웨어 생명주기(SDLC) 경험
+  
+        - layout: left
+          title: K-Ranking (국내 대학 랭킹 서비스)
+          link: https://github.com/ivneld/k-ranking
+          quote: >
+            국제 대학 평가 기구의 데이터를 활용한 데이터 가공 및 랭킹 지표 제공 서비스
+          description: |
+            - **단독 백엔드 개발**: 프로젝트의 유일한 백엔드 엔지니어로서 서버 아키텍처 설계, DB 스키마 설계 및 전체 API 개발 담당
+            - **데이터 가공 및 집계**: 국제 기구의 원시 데이터를 수집하고 가공하여 사용자에게 유의미한 랭킹 지표로 치환하는 비즈니스 로직 구현
+            - **성능 중심 설계**: 복잡한 데이터 집계 요청에 대응하기 위해 효율적인 쿼리 작성 및 응답 속도 최적화 수행
 
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+        - layout: left
+          title: Cafekiosk (Backend Base Test 세미나 자료)
+          link: https://github.com/ivneld/cafekiosk
+          quote: >
+            국제 대학 평가 기구의 데이터를 활용한 데이터 가공 및 랭킹 지표 제공 서비스
+          description: |
+            - **단독 백엔드 개발**: 프로젝트의 유일한 백엔드 엔지니어로서 서버 아키텍처 설계, DB 스키마 설계 및 전체 API 개발 담당
+            - **데이터 가공 및 집계**: 국제 기구의 원시 데이터를 수집하고 가공하여 사용자에게 유의미한 랭킹 지표로 치환하는 비즈니스 로직 구현
+            - **성능 중심 설계**: 복잡한 데이터 집계 요청에 대응하기 위해 효율적인 쿼리 작성 및 응답 속도 최적화 수행
 
-  - title: A Little More About Me
-    layout: text
-    content: | # this will include new lines to allow paragraphs
-      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
-      - Gaming
-      - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+  - title: Education
+      layout: list
+      content:
+        - layout: left
+          title: Sejong University (세종대학교)
+          caption: 2021.03 - 2023.08
+          sub_title: Computer Science
+          quote: >
+            컴퓨터공학 전공 학사 졸업
+          description: |
+            - 자료구조, 알고리즘, 운영체제 등 컴퓨터공학 전반의 핵심 이론을 학습하며 엔지니어로서 필요한 논리적 사고의 기반을 다졌습니다.
+            - 학업 기간 중 백엔드 개발에 대한 심화 학습을 병행하여, 졸업 후 즉시 실무에 투입될 수 있는 기술적 역량을 확보했습니다.
 
-      Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
+#  - title: A Little More About Me
+#    layout: text
+#    content: | # this will include new lines to allow paragraphs
+#      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
+#      - Rock climbing
+#      - Gaming
+#      - Knitting
+#      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+#
+#      Look at this cool image  
+#      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
 
 # Footer
 footer_show_references: true
