--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ additional_links:
 - title: itsgoingto.be
   icon: fas fa-globe
   url: https://www.itsgoingto.be
+- title: Download PDF Resume
+  icon: fas fa-file-pdf
+  url: https://ivneld.github.io/github-pages/assets/downloads/resume.pdf
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
