--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Ivneld's Blog # the main title
+title: MeteorKim's Tech Blog # the main title
 
 tagline: A text-focused Jekyll theme # it will display as the subtitle
 
